--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         height: 100%;
       }
       html, body {
+        min-width: 1280px;
         height: 100%;
         margin: 0;
         padding: 0;
