--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       color: #818181;
       display: block;
       }
+        @media screen and (max-height: 450px) {
+      .sidebar {padding-top: 15px;}
+      .sidebar a {font-size: 18px;}
+      }
 
       body {
       font-family: "Lato", sans-serif;
