--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Territories Maps</title>
-    <meta name="viewport" content="width=device, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 <style>
 
@@ -92,7 +92,7 @@
     <script>
 
         function openNav() {
-        document.getElementById("sidebar").style.width = "400px";
+        document.getElementById("sidebar").style.width = "300px";
         }
 
         function closeNav() {
