--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
   margin-left: 50px;
  }
 
- @media screen and (max-width: 330px) {
-  #map {width = 330px}
+ @media screen and (max-height: 450px) {
   #sidebar {padding-top: 15px;}
   #sidebar a {font-size: 18px;}
  }
