--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
  }
 
  @media screen and (max-height: 450px) {
+  body {width: 435;}
   #sidebar {padding-top: 15px;}
   #sidebar a {font-size: 18px;}
  }
