--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   }
 
   html, body {
-   min-width: 1280px;
    height: 100%;
+   width: 100%;
    margin: 0;
    padding: 0;
+   overflow-x: hidden; 
   }
 
  #sidebar {
