--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
       <span class="openbtn" style="color:#818181;font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
     </div>
 
-    <div id="sidebar" style="color: #edebe8">
-      <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSJLeejB2GBTTHxsIE7lHD-AVoeJjjcxVmSYdAwjlUGmclRYnDMnBqA3TN-zKDtK9M16u43pn8k9KIf/pubhtml" style="height: 93%;width: 433px;"></iframe> 
+    <div id="sidebar" style="color: #edebe8"> 
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <iframe width="433" height="90%" src="https://onedrive.live.com/embed?resid=16C6D6E059446297%21104&authkey=%21ANJim7VHqUz6MUA&em=2&ActiveCell='Sheet1'!A1&AllowTyping=True&wdInConfigurator=True"></iframe>
     </div>
 
     <script>
